# movie-database

./: .gitignore  README.md  pyproject.toml  t.py
libs/movie-database/: README.md  pyproject.toml
libs/movie-database/app/application/commands/movie_rating/: rate_movie.py
libs/movie-database/app/application/commands/registration/: register.py
libs/movie-database/app/application/common/interfaces/: identity_provider.py
libs/movie-database/app/domain/events/: event.py  movie_rating.py
libs/movie-database/app/domain/models/: movie.py  movie_rating.py  user.py
libs/movie-database/app/infrastructure/database/: factory.py
libs/movie-database/app/infrastructure/database/repositories/: __init__.py  movie.py  movie_rating.py  movies_rating_policy.py  user.py
libs/movie-database/app/infrastructure/message_broker/: event_bus.py  mappers.py
libs/movie-database/app/main/: ioc.py
libs/movie-database/app/main/message_broker/: dependencies.py
libs/movie-database/app/main/web_api/: dependencies.py
libs/movie-database/app/presentation/: handler_factory.py
libs/movie-database/app/presentation/web_api/: exceptions.py
libs/movie-database/app/presentation/web_api/dependencies/: identity_provider.py
libs/movie-database/app/presentation/web_api/routers/: __init__.py
libs/movie-database/migrations/: movie-database-init.sql
libs/movie-database/src/app/domain/events/: achievement.py  delayed_movie.py  movie_rating.py
libs/movie-database/src/app/domain/models/: achievement.py  delayed_movie.py  movies_rating_policy.py  user.py
libs/movie-database/src/app/domain/policies/: __init__.py  policy.py
libs/movie-database/src/app/domain/services/: achievement.py  movie_rating.py
libs/movie-database/src/app/infrastructure/: uow.py
libs/movie-database/src/app/infrastructure/database/: connection_pool.py  factory.py  mappers.py  uow.py
libs/movie-database/src/app/infrastructure/message_broker/: event_bus.py
libs/movie-database/src/app/main/: ioc.py
libs/movie-database/src/app/main/message_broker/: dependencies.py
libs/movie-database/src/app/main/web_api/: app.py  dependencies.py
libs/movie-database/src/app/presentation/: handler_factory.py
src/movie-database-admin/: pyproject.toml
src/movie-database-admin/app/application/commands/: handler.py
src/movie-database-admin/app/application/commands/superuser/: change_password.py  create_superuser.py
src/movie-database-admin/app/application/queries/: handler.py
src/movie-database-admin/app/domain/: constants.py
src/movie-database-admin/app/domain/exceptions/: access.py
src/movie-database-admin/app/domain/models/: access_policy.py  model.py  superuser.py  user.py
src/movie-database-admin/app/domain/services/: access.py
src/movie-database-admin/app/infrastructure/: uow.py
src/movie-database-admin/app/infrastructure/database/: factory.py  mappers.py
src/movie-database-admin/app/main/: config.py  ioc.py
src/movie-database-admin/app/main/message_broker/: __main__.py  dependencies.py
src/movie-database-admin/app/main/web_api/: __main__.py  app.py  dependencies.py
src/movie-database-admin/app/presentation/: handler_factory.py
src/movie-database-admin/app/presentation/web_api/: depends_stub.py  exceptions.py
src/movie-database-admin/migrations/: movie-database-admin-init.sql
src/movie-enricher/: pyproject.toml
src/movie-enricher/app/main/: __main__.py  config.py
src/movie-enricher/app/main/message_broker/: app.py  config.py
src/movie_database/: pyproject.toml
src/movie_database/app/infrastructure/: uow.py
src/movie_database/app/infrastructure/database/: mappers.py
src/movie_database/app/main/web_api/: config.py  server.py
src/movie_database/migrations/: movie-database-init.sql
(+681 files in other folders)
