[tool.poetry]
name = "movie-database"
version = "0.1.0"
description = ""
authors = ["Egor <baseddepartmentzx77@gmail.com>"]
readme = "README.md"
packages = [{include = "movie_database"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.telegram-admin.dependencies]
asyncpg = "^0.28.0"
aiobcrypt = "^3.2.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
