[tool.poetry]
name = "movie-database"
version = "0.1.0"
description = ""
authors = ["Egor <baseddepartmentzx77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.telegram.dependencies]
aiogram = "^3.0.0b5"
asyncpg = "^0.28.0"
aiobcrypt = "^3.2.0.post1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
