[tool.poetry]
name = "movie-database-admin"
version = "0.1.0"
description = ""
authors = ["Egor <baseddepartmentzx77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.message_broker.dependencies]
faststream = {extras = ["rabbit"], version = "^0.2.9"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
