[tool.poetry]
name = "movie-enricher"
version = "0.1.0"
description = ""
authors = ["Egor <baseddepartmentzx77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faststream = {extras = ["rabbit"], version = "^0.2.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
